--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "echarts": "^5.4.3",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
     "vue-draggable-next": "^2.2.1",
+    "vue-echarts": "^6.6.8",
     "vue-router": "^4.2.5",
     "vuedraggable": "^4.1.0"
   },
